# Maretu-Lite

./: .gitignore  LICENSE  README.md  SECURITY.md  SEGURITY  SETUP.md  pyproject.toml
docs/: index.html
src/: main.py
src/database/: maretu.db
src/modules/: configurarRuta.py  maretuQuery.py  maretuSQL.py
src/querys/consultas/: verClientes.sql  verProductos.sql  verTablas.sql
src/querys/inserciones/: registrarCliente.sql  registrarProducto.sql
src/querys/tablas/: clientes.sql  productos.sql
src/views/: base.py  clientes.py  configuracion.py  error.py  inventario.py  principal.py  reportes.py  ventas.py
src/widgets/: appBar.py  botonMenu.py  botonPantallaCompleta.py  dialogoAbout.py  popupAbout.py
