[project]
name = "maretu-lite"
version = "0.0.3"
description = "Maretu (Skell's Maretu Lite) es una aplicación de punto de venta para dispositivos Android y próximamente ejecutable en Windows; funcionando completamente de manera local sin dependencias al internet."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Robert Rodríguez", email = "skellent69@gmail.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.skellent"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Maretu"

# company name to display in about app dialogs
company = "Skell's Software"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Skell's Software"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "rich>=14.2.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
